Fix: Linebreaks in preformatted code should be visible

--- a/modules/cms/ui/themes/default/style/openrat-normalize.less
+++ b/modules/cms/ui/themes/default/style/openrat-normalize.less
@@ -141,6 +141,7 @@ time {
   text-overflow: ellipsis;
   overflow: hidden;
   display: block;
+  white-space: pre-wrap;
 }
 
 // Forms ==========================================================================
